Fix [igzValidatingInputField] Popup: blocked click below field
When validation pop-up is open clicking below the field is blocked by
an invisible wrapper of the validation pop-up.

--- a/src/igz_controls/components/validating-input-field/validating-input-field.less
+++ b/src/igz_controls/components/validating-input-field/validating-input-field.less
@@ -170,7 +170,8 @@
         z-index: 4;
 
         .validation-pop-up {
-            position: relative;
+            position: absolute;
+            width: 260px;
             border-radius: 3px;
             opacity: 1;
             box-shadow: @validation-pop-up-box-shadow;
@@ -181,12 +182,12 @@
                 opacity: 0;
             }
 
-            &.ng-hide-remove {
+            &.ng-hide-remove, &.ng-hide-add {
                 transition: opacity 0.1s ease-in;
             }
 
             &.validation-pop-up-top {
-                top: calc(-100% - 38px);
+                bottom: 38px;
             }
 
             &.validation-pop-up-bottom {
